--- a/ang/crmFieldMetadata/crmRenderField.html
+++ b/ang/crmFieldMetadata/crmRenderField.html
@@ -1,6 +1,8 @@
 <div class="crm-section" crm-ui-id-scope="field.name">
   <div class="label">
-    <label crm-ui-for="{{field.name}}" crm-depth="1">{{field.label}}</label>
+    <label for="{{prefix}}{{field.name}}" crm-is-required="field.required" crm-depth="1">{{field.label}}
+      <span crm-ui-visible="field.required" class="crm-marker" title="This field is required.">*</span>
+    </label>
     <a crm-ui-help="help" ng-if="help"></a>
   </div>
   <div class="content">
