--- a/ang/crmFieldMetadata/crmRenderText.html
+++ b/ang/crmFieldMetadata/crmRenderText.html
@@ -1,1 +1,1 @@
-<input name="{{field.name}}" ng-model="model" /><span class="price-field-amount" ng-if="field.displayPrice"> $ {{field.price}}</span>
+<input name="{{field.name}}" ng-model="model" ng-required="field.required" /><span class="price-field-amount" ng-if="field.displayPrice"> $ {{field.price}}</span>
