--- a/ang/crmFieldMetadata/crmRenderSelect.html
+++ b/ang/crmFieldMetadata/crmRenderSelect.html
@@ -1,3 +1,3 @@
-<select crm-ui-select="{allowClear: !field.required, width: 'auto'}" class="large" ng-model="model" ng-required="field.required" >
-  <option ng-repeat="option in field.options" ng-value="option.value">{{option.label}}{{printPrice(option)}}</option>
+<select crm-ui-select="{allowClear: !field.required, width: 'auto', dropdownAutoWidth : true}" class="{{classes}}" ng-model="model" ng-required="field.required" >
+  <option ng-repeat="option in field.options" ng-value="option.value" value="{{option.value}}">{{option.label}}{{printPrice(option)}}</option>
 </select>
