Refactored crmRenderCheckbox directive.
Improvements:
- Boxes are now checked as appropriate after records are retrieved from the server.
- Better handling of types when server reports no boxes are checked.
- Model reflects all the checked boxes in a checklist group (rather than having one model per checkbox),
  consistent with CiviCRM's API.
- Checkboxes are marked required based on the field metadata rather than the option metadata -- is
  there such a thing as a required option? -- taking into account whether other boxes are checked.

Works in progress:
- Form validation doesn't work, despite a proper result in ng-required. To fix this I think there are
  two possible approaches: define ngModel on the element using a getterSetter, or override $isEmpty for
  the directive.

--- a/ang/crmFieldMetadata/crmRenderCheckbox.html
+++ b/ang/crmFieldMetadata/crmRenderCheckbox.html
@@ -1,7 +1,8 @@
 <input ng-if="!field.options.length" type="checkbox" ng-model="$parent.model"  name="{{field.name}}" id="{{prefix}}{{field.name}}" ng-required="field.required" />
 
 <div ng-if="field.options.length" ng-repeat="option in field.options">
-  <input type="checkbox" ng-model="$parent.model[option.value]" id="{{prefix}}{{field.name}}_{{option.value}}" name="{{option.name}}" ng-required="option.required" />
+  <input type="checkbox" id="{{prefix}}{{field.name}}_{{option.value}}" name="{{option.name}}"
+         ng-click="handleToggle(option.value)" ng-checked="isChecked(option.value)" ng-required="isRequired()" />
   <label for="{{prefix}}{{field.name}}_{{option.value}}">
     <span ng-if="option.preText" class="crm-help-pre description">{{option.preText}}:</span>
     {{option.label}}
