Fixes #11: Price field radio buttons display amount regardless of configuration.
Based on a read of the code, checkboxes were also affected by this bug. The fundamental problem was that the widget
templates didn't take the displayPrice property into account. For consistency, I updated the normalizer to use the
new normalizeBoolean() method, reducing doubt on the client side about the return format.

--- a/ang/crmFieldMetadata/crmRenderCheckbox.html
+++ b/ang/crmFieldMetadata/crmRenderCheckbox.html
@@ -24,7 +24,7 @@
   <label for="{{prefix}}{{field.name}}_{{option.value}}">
     <span ng-if="option.preText" class="crm-help-pre description">{{option.preText}}:</span>
     {{option.label}}
-    <span ng-if="option.price" class="crm-price-amount-amount"> - {{formatMoney(option.price)}}</span>
+    <span ng-if="option.price && field.displayPrice" class="crm-price-amount-amount"> - {{formatMoney(option.price)}}</span>
     <span ng-if="option.postText" class="crm-help-post description">:{{option.postText}}</span>
   </label>
 </div>
